# Chess_v2

./: CMakeLists.txt  README.md
dev/: main.cpp
dev/Core/: Core.cpp  Core.h
dev/Core/Types/: BaseTypes.h
dev/Core/Types/ChessCoordinate/: ChessCoordinate.cpp  ChessCoordinate.h
dev/Core/Types/ChessFigureAbstract/: ChessFigureAbstract.cpp  ChessFigureAbstract.h
dev/Core/Types/ChessFigureBishop/: ChessFigureBishop.cpp  ChessFigureBishop.h
dev/Core/Types/ChessFigureKing/: ChessFigureKing.cpp  ChessFigureKing.h
dev/Core/Types/ChessFigureKnight/: ChessFigureKnight.cpp  ChessFigureKnight.h
dev/Core/Types/ChessFigurePawn/: ChessFigurePawn.cpp  ChessFigurePawn.h
dev/Core/Types/ChessFigureQueen/: ChessFigureQueen.cpp  ChessFigureQueen.h
dev/Core/Types/ChessFigureRook/: ChessFigureRook.cpp  ChessFigureRook.h
dev/Core/Types/ChessFiguresAbstract/: ChessFiguresAbstract.cpp  ChessFiguresAbstract.h
dev/Resources/: Images.qrc
dev/UserInterface/: MainWindow.cpp  MainWindow.h  MainWindow.ui
dev/UserInterface/GameField/: GameField.cpp  GameField.h
